<resources>
    <string name="app_name">MovieKu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="start">Get Started</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="have_account">Have Account?</string>
    <string name="phone_number">Phone Number</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="delete_account">Delete Account</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec tortor dui. Aliquam erat volutpat. Morbi justo enim, lacinia quis blandit quis, pharetra eget libero. Fusce eu augue porttitor, efficitur sapien id, fringilla diam. Nulla sed porttitor purus. In id risus vel magna posuere condimentum. Duis sit amet mollis urna. Curabitur posuere, neque quis consectetur cursus, magna velit iaculis diam, quis scelerisque mi orci vel augue. Nunc ut magna dapibus, elementum nisl ut, egestas eros. Pellentesque nec euismod est, ut imperdiet tellus. Donec maximus eget nunc id gravida. Nulla porttitor mollis velit vel porttitor. Nullam id lacus risus. Aenean mattis tellus eget varius facilisis.</string>
    <string name="hi_name">Hi, name</string>
    <string name="now_playing">Now Playing</string>
    <string name="popular">Popular</string>
    <string name="up_coming">Up Coming</string>
    <string name="top_rated">Top Rated</string>
    <string name="title">Title</string>
    <string name="_1_1">1.1</string>
    <string name="detail_movies">Detail Movies</string>
    <string name="status">Status</string>
    <string name="genre">Genre:</string>
    <string name="rating">Rating:</string>
    <string name="release_date">Release Date:</string>
    <string name="overview">Overview</string>
    <string name="profile_user">Profile User</string>
    <string name="logout">Logout</string>
    <string name="next">Next...</string>
    <string name="get_started">Get Started</string>
    <string name="favorite_watchlist">Favorite Watchlist</string>
    <string name="login_success">Login Success</string>
    <string name="login_failed">Login Failed, Please check email and password correctly</string>
    <string name="forget_password">Forget Password?</string>
    <string name="forgot_password">Forget Password</string>
    <string name="find">Find</string>
    <string name="new_password">Change New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="welcome">Welcome to \n MovieKu</string>
    <string name="secondScreen">the latest \nand most updated movies</string>
    <string name="videos">Videos</string>
    <string name="reviews">Reviews</string>
    <string name="recomended">Recomended</string>
</resources>