<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.homepage.profile.user.ProfileUserFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/iv_back_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/profile_user"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/iv_back_home"
            app:layout_constraintTop_toTopOf="@id/iv_back_home"
            app:layout_constraintBottom_toBottomOf="@id/iv_back_home"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:cardCornerRadius="100dp"
            app:layout_constraintTop_toBottomOf="@id/iv_back_home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/username"
            android:textStyle="bold"
            android:textSize="@dimen/title_l"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/cv_profile"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_get_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="@dimen/title_l"
            android:hint="@string/username"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_username"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            android:textStyle="bold"
            android:textSize="@dimen/title_l"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_get_username"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_get_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/name"
            android:textSize="@dimen/title_l"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            android:textStyle="bold"
            android:textSize="@dimen/title_l"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_get_name"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_get_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/email"
            android:textSize="@dimen/title_l"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_email"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/age"
            android:textStyle="bold"
            android:textSize="@dimen/title_l"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_get_email"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_get_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/age"
            android:textSize="@dimen/title_l"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_age"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/phone_number"
            android:textStyle="bold"
            android:textSize="@dimen/title_l"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_get_age"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_get_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/phone_number"
            android:textSize="@dimen/title_l"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_phone"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/green"
            android:text="@string/edit_profile"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_logout"/>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/logout"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>